# Student-management-system

./: CMakeLists.txt  README.md  admin.cpp  admin.db  admin.h  admin.ui  admin2.db  adminpanel.cpp  adminpanel.h  adminpanel.ui  dialog.cpp  dialog.h  dialog.ui  formreg.cpp  formreg.h  formreg.ui  hashpass.cpp  hashpass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  regform.cpp  regform.h  regform.ui  regform_1.cpp  regform_1.h  regform_1.ui  register.ui  registerform.cpp  registerform.h  registerform.ui  resource.qrc  schdb.sql  schlserver.cpp  schlserver.h  secwin.cpp  secwin.h  secwin.ui
